--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@docusaurus/core": "^2.0.0-alpha.58",
     "@docusaurus/preset-classic": "^2.0.0-alpha.58",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-openapi": "^0.0.12",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
