--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@mdx-js/react": "^1.6.18",
     "clsx": "^1.1.1",
     "docusaurus-plugin-openapi": "^0.0.12",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "lodash.merge": "^4.6.2",
+    "mobx-persist": "^0.4.1",
+    "mobx-react-form": "^2.0.9",
+    "mobx-state-tree": "^3.17.2",
+    "valid-url": "^1.0.9",
+    "validatorjs": "^3.20.0"
   },
   "browserslist": {
     "production": [
@@ -35,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
+    "core-js": "^3.6.5",
     "eslint": "6.x",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "4.x",
@@ -42,7 +47,13 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "2.x",
+    "mobx": "5.15.7",
+    "mobx-react": "^7.0.0",
     "nodemon": "^2.0.4",
-    "openapi-comment-parser": "^0.3.7"
+    "openapi-comment-parser": "^0.3.7",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "redoc": "^2.0.0-rc.40",
+    "styled-components": "^5.2.0"
   }
 }
