--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@docusaurus/core": "^2.0.0-alpha.58",
     "@docusaurus/preset-classic": "^2.0.0-alpha.58",
     "@mdx-js/react": "^1.6.18",
+    "buffer": "^5.7.0",
     "clsx": "^1.1.1",
     "lodash.merge": "^4.6.2",
     "mobx-persist": "^0.4.1",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
+    "action": "0.0.1",
     "babel-eslint": "10.x",
     "core-js": "^3.6.5",
     "eslint": "6.x",
@@ -46,7 +48,7 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "2.x",
-    "mobx": "5.15.7",
+    "mobx": "^5.15.7",
     "mobx-react": "^7.0.0",
     "nodemon": "^2.0.4",
     "openapi-comment-parser": "^0.3.7",
